feat: JavaFX-UI-Migration mit AppShell-Navigation und Encounter-Workflow
Migriert die komplette UI von Swing zu JavaFX mit einem neuen 3-Spalten-Layout
(AppShell/AppView/ViewId), inline Panes statt Dialoge, CSS-Token-System und
einem vollstaendigen Encounter-Workflow (Builder → Initiative → Kampf).

Sicherheit & Barrierefreiheit:
- SQL-Injection-Whitelist in saveJunctionValues (CreatureRepository)
- HP-Bar mit Tastaturzugang (BUTTON-Rolle, Enter/Space) und korrektem Textkontrast
- Filter-Popup Fokus-Management und Escape-Handler gefixt
- Kreatur-Namens-Labels per Tastatur erreichbar (focusTraversable + KeyHandler)
- crawler*.properties in .gitignore, DifficultyMeter Accessibility-Notification

Korrektheit & Code-Qualitaet:
- loadStatBlock() extrahiert (InspectorPane), manualInit-Parameter entfernt (CombatSetup)
- onAutoShowStatBlock → onEnsureStatBlock umbenannt (CombatTrackerPane/EncounterView)
- O(n) Karten-Rebuild durch updateCardOrdinal() ersetzt
- Party-Lade-Buttons waehrend async Task deaktiviert
- Typeahead-SQL nutzt COLLATE NOCASE statt LOWER()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>